--- a/odin-recipes/recipes/lasagna.html
+++ b/odin-recipes/recipes/lasagna.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Lasagna</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Lasgna</h1>
-</body>
+    <img src="./food.webp" alt="" />
+    <h2>Ingredients</h2>
+    <ul>
+      <li>Flour</li>
+      <li>Water</li>
+      <li>Lemon</li>
+      <li>Salad</li>
+      <li>Bread</li>
+    </ul>
+    <ol>
+      <li>
+        Place chicken into a large pot and add water to cover. Bring to a boil
+        over high heat, then reduce the heat to medium-low, cover, and simmer
+        until chicken is no longer pink and the juices run clear, about 10
+        minutes.
+      </li>
+      <li>
+        Remove from the pot and let sit until cool enough to handle, 5 to 10
+        minutes. Shred chicken with two forks.
+      </li>
+      <li>
+        Combine sour cream, condensed soup, and chili powder in a saucepan.
+        Bring to a simmer, stirring occasionally, then turn off the heat and
+        cover to keep warm
+      </li>
+      <li>
+        At the same time, melt butter in a skillet over medium heat. Add onion;
+        cook and stir until translucent, about 5 minutes. Add shredded chicken,
+        water, 1/2 of the green onions, green chiles, and taco seasoning; simmer
+        for 10 minutes. Stir in lime juice, onion powder, and garlic powder;
+        simmer for 10 more minutes.
+      </li>
+      <li>Preheat the oven to 350 degrees F (175 degrees C).</li>
+    </ol>
+  </body>
 </html>
